<resources>
    <string name="app_name">Scale-Pal</string>
    <string name="clarinet">Clarinet</string>
    <string name="alto">Alto</string>
    <string name="flute">Flute</string>
    <string name="french_horn">French Horn</string>
    <string name="Major_f1">F</string>
    <string name="e">E</string>
    <string name="b_flat">B Flat</string>
    <string name="c">C</string>
    <string name="g">G</string>
    <string name="flute_major_scale">Flute Major Scale</string>
    <string name="french_horn_major_scales">French Horn Major Scales</string>
    <string name="sax_major_scales">Sax Major Scales</string>
    <string name="clarinet_major_scales">Clarinet Major Scales</string>
    <string name="alphabet">A B C D E F G...</string>
    <string name="home_pg">Home pg</string>
    <string name="bbflute">Major Bb is Concert Bb</string>
    <string name="cflute">Major C is Concert C</string>
    <string name="cfluteanswer">Starting note is C</string>
    <string name="eflute">Major E is Concert E</string>
    <string name="gflute">Major G is Concert G</string>
    <string name="gfluteanswer">Starts on G with F#</string>
    <string name="starting_note_is_c">Starting note is C</string>
    <string name="major_c">Major C</string>
    <string name="major_bb_is_equal_to_concert_ab">Major Bb is equal to Concert Ab</string>
    <string name="bb_answer">Starts on Bb with Bb in key</string>
    <string name="bbfrench">Major Bb is Concert Eb</string>
    <string name="major_f_scale">Starts on G with F#</string>
    <string name="major_g_is_concert_f">Major G is Concert F</string>
    <string name="starts_on_g_with_f_in_key_signature">Starts on G with F# in key signature</string>
    <string name="major_e_is_concert_d">Major E is Concert D</string>
    <string name="starts_on_e_with_f_g_c_d">Starts on E with F#, G#, C#, D#</string>
    <string name="starts_on_g_with_f">Starts on G with F#</string>
    <string name="major_g_is_concert_bb">Major G is Concert Bb</string>
    <string name="major_bb_is_concert_db">Major Bb is Concert Db</string>
    <string name="starts_on_bb_with_eb_bb">Starts on Bb with Eb, Bb</string>
    <string name="starts_on_c">Starts on C</string>
    <string name="ffluteanswer">Starts on F with Bb</string>
    <string name="fflute">Major F is Concert F</string>
    <string name="major_e_is_concert_g">Major E is Concert G</string>
    <string name="major_f_is_concert_ab">Major F is Concert Ab</string>
    <string name="starts_on_f_with_ab">Starts on F with Ab</string>
    <string name="textview">TextView</string>
    <string name="flutebbanswer">Scale starts on Bb with Bb, Eb</string>
    <string name="major_f_clarinet">major f clarinet</string>
    <string name="major_f_clarrinet_string_bb_answer">major f clarrinet</string>
    <string name="clariner_bb_string_bb_answer">clariner bb</string>
    <string name="major_c_saxophone">Major C is Concert Eb</string>
    <string name="major_f_is_concert_f">Major F is Concert F</string>
    <string name="starts_of_f">starts of f</string>
    <string name="major_f_is_concert_eb">Major F is Concert Eb</string>
    <string name="starts_with_bb_and_has_bb_in_key">Starts with Bb and has Bb in key</string>
    <string name="majorfclarinetpart">majorfclarinetpart</string>
    <string name="major_c_is_equal_to_concert_bb">Major C is equal to Concert Bb</string>
    <string name="major_e_is_concert_a">Major E is Concert A</string>
    <string name="starts_on_bb_with_bb_in_key_signature">Starts on Bb with Bb in key signature</string>
    <string name="major_c_is_concert_bb">Major C is Concert Bb</string>
    <string name="starts_on_f_with_bb">Starts on F with Bb</string>
    <string name="major_f_is_concert_bb">Major F is Concert Bb</string>
    <string name="major_g_is_concert_c">Major G is Concert C</string>
    <string name="major_c_is_concert_f">Major C is Concert F</string>
    <string name="major_c_is_concert_eb">Major C is Concert Eb</string>
    <string name="newname">Major C is Concert Eb</string>
    <string name="secondname">Starting note is C</string>
    <string name="button">C</string>
    <string name="funfact">Fun Fact</string>
    <string name="flutefact">Fun Fact</string>
    <string name="flutefactpage">Most flutes are made of Silver but can also be made from gold or even wood</string>
    <string name="factsax">Fun Fact</string>
    <string name="saxfactanswer">Kenny g holds the record for playing the longest sustained note on saxophone
    </string>
    <string name="frenchhornfact">Fun Fact</string>
    <string name="frenchhornfactanswer">The french horn is actually german</string>
    <string name="select_which_instrument">Select Which Instrument</string>
    <string name="clarinet_fact_answer">It is generally said to have been invented by the Nuremberg instrument maker
        Johann Christoph Denner at the start of the eighteenth century.
    </string>
    <string name="clarinetbutton">clarinetbutton</string>
    <string name="clarinetbuttonfact">Fun Fact</string>
    <string name="Tuner">Bb Tuner</string>
    <string name="majoresound">Play Scale</string>
    <string name="majorbbsound">Play Scale</string>
    <string name="majorfsound">Play Scale</string>
    <string name="playcsound">Play Scale</string>
    <string name="majorgsound">Play Scale</string>
</resources>
