<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Saxophone">

    <Button
            android:text="@string/g"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:id="@+id/majorG2" android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
            android:layout_marginBottom="53dp" android:background="@color/colorPrimary" android:fontFamily="casual"/>
    <Button
            android:text="@string/e"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:id="@+id/majorE2"
            android:fontFamily="casual"
            android:background="@color/colorPrimary"
            android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
            android:layout_marginBottom="149dp"/>
    <Button
            android:text="@string/b_flat"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:id="@+id/majorBFlat2"
            android:background="@color/colorPrimary" android:fontFamily="casual"
            android:layout_centerInParent="true"/>
    <Button
            android:text="@string/Major_f1"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:id="@+id/majorF2"
            android:layout_alignParentTop="true" android:layout_marginTop="161dp" android:fontFamily="casual"
            android:textSize="18sp" android:background="@color/colorPrimary" android:layout_centerHorizontal="true"/>
    <TextView
            android:text="@string/sax_major_scales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/MajorScale" android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" android:layout_marginTop="13dp" android:textSize="18sp"
            android:fontFamily="casual" android:textStyle="bold"/>
    <Button
            android:text="@string/button"
            android:layout_width="57dp"
            android:layout_height="wrap_content" android:id="@+id/majorC2"
            android:background="@color/colorPrimary" android:fontFamily="casual" android:textSize="18sp"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            android:layout_marginTop="68dp"/>
    <Button
            android:text="@string/factsax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/factsax" android:layout_alignParentStart="true"
            android:layout_marginStart="18dp" android:layout_alignParentBottom="true"
            android:layout_marginBottom="13dp"/>
</RelativeLayout>