<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Clarinet">

    <Button
            android:text="@string/e"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:id="@+id/ClarinetMajorE"
            android:textSize="18sp" android:background="@color/colorPrimary" android:fontFamily="casual"
            android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
            android:layout_marginBottom="53dp"/>
    <Button
            android:text="@string/g"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:id="@+id/ClarinetmajorG"
            android:fontFamily="casual"
            android:textSize="18sp" android:background="@color/colorPrimary"
            android:layout_alignParentTop="true"
            android:layout_marginTop="65dp" android:layout_centerHorizontal="true"/>
    <Button
            android:text="@string/b_flat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ClarinetmajorBFlat"
            android:textSize="18sp" android:fontFamily="casual"
            android:background="@color/colorPrimary"
            android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
            android:layout_marginBottom="159dp"/>
    <Button
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:id="@+id/ClarinetmajorC"
            android:textSize="18sp" android:text="@string/c"
            android:background="@color/colorPrimary" android:fontFamily="casual"
            android:layout_centerInParent="true"/>
    <TextView
            android:text="@string/clarinet_major_scales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Clarinetmajor" android:fontFamily="casual"
            android:textSize="18sp"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <Button
            android:text="@string/Major_f1"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:id="@+id/ClarinetmajorF"
            android:textSize="18sp"
            android:fontFamily="casual" android:background="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" android:layout_marginTop="161dp"/>
    <Button
            android:text="@string/clarinetbuttonfact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/clarinetfact"
            android:fontFamily="casual"
            android:layout_toEndOf="@+id/Clarinetmajor" android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"/>
</RelativeLayout>