<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/french_horn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/FrenchButton"
            android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
            android:layout_marginBottom="194dp" android:background="@android:color/holo_blue_bright"
            android:fontFamily="casual"/>
    <Button
            android:text="@string/flute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/FluteButton"
            android:layout_centerInParent="true" android:background="@android:color/holo_blue_bright"
            android:fontFamily="casual"/>
    <Button
            android:text="@string/clarinet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ClarinetButton" android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" android:layout_marginTop="125dp"
            android:background="@android:color/holo_blue_bright" android:fontFamily="casual"/>
    <Button
            android:text="@string/alto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/AltoButton" android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" android:layout_marginTop="193dp"
            android:background="@android:color/holo_blue_bright" android:fontFamily="casual"/>
    <TextView
            android:text="@string/select_which_instrument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Title" android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" android:layout_marginTop="53dp" android:fontFamily="casual"
            android:textSize="24sp" android:textStyle="bold"/>
    <Button
            android:text="@string/Tuner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Tuner" android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" android:layout_marginBottom="36dp"
            style="@style/Widget.AppCompat.Button" android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:fontFamily="casual" android:textStyle="bold" android:textAllCaps="false"/>
</RelativeLayout>