<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ConcertF1">

    <TextView
            android:text="@string/major_g_is_concert_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/F1" android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" android:layout_marginTop="138dp" android:textSize="24sp"/>
    <TextView
            android:text="@string/starts_on_g_with_f_in_key_signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ClarinetFStart" android:textSize="18sp"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            android:layout_marginTop="211dp"/>
    <Button
            android:text="@string/majorgsound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button3" android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" android:layout_marginBottom="14dp"/>
</RelativeLayout>