<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ConcertBFlat1">

    <TextView
            android:text="@string/major_c_is_concert_bb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/MajorC"
            android:layout_alignParentTop="true"
            android:layout_marginTop="96dp" android:layout_centerHorizontal="true" android:textSize="24sp"
    />
    <TextView
            android:text="@string/starting_note_is_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ClarinetBbStart"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" android:layout_marginTop="162dp" android:textSize="24sp"
            android:textAlignment="center"/>
    <Button
            android:text="@string/playcsound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/PlayCSound" android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" android:layout_marginBottom="21dp"/>
</RelativeLayout>