<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ConcertC1">

    <TextView
            android:text="@string/major_f_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/gmajorfrench" tools:text="Starts on G with F#"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            android:layout_marginTop="203dp" android:textSize="24sp"/>
    <TextView
            android:text="@string/major_g_is_concert_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            android:textSize="24sp" android:textAlignment="center" android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" android:layout_marginTop="91dp"/>
    <Button
            android:text="@string/majorgsound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/MajorGSound" android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" android:layout_marginBottom="14dp"/>
</RelativeLayout>