<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ConcertBFlat2">

    <TextView
            android:text="@string/starts_on_g_with_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/SaxophoneBbStart" android:textSize="18sp"
            android:textAlignment="center" android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            android:layout_marginTop="183dp"/>
    <TextView
            android:text="@string/major_g_is_concert_bb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Bb2" android:textSize="24sp"
            android:textAlignment="center" android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            android:layout_marginTop="106dp"/>
    <Button
            android:text="@string/majorgsound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/MajorGSound" android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" android:layout_marginBottom="17dp"/>
</RelativeLayout>